--- a/big_data_algorithms/filtering/notebook.ipynb
+++ b/big_data_algorithms/filtering/notebook.ipynb
@@ -2,13 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1152251956613597\n",
+      "[1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1]\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "import big_data_algorithms.filtering as filt\n",
+    "\n",
+    "hash_a = lambda x: (2 * x + 1) % 32\n",
+    "hash_b = lambda x: (3 * x + 7) % 32\n",
+    "hash_c = lambda x: (4 * x) % 32\n",
+    "\n",
+    "bloom = filt.BloomFilter([hash_a, hash_b, hash_c], 32)\n",
+    "\n",
+    "X = [1, 0, 0, 9, 2, 1, 4, 8, 7, 2, 1]\n",
+    "\n",
+    "bloom.insert_all(X)\n",
+    "\n",
+    "print(bloom.false_positive_rate())\n",
+    "print(bloom.B)"
    ]
   }
  ],
